--- a/styles/projects.css
+++ b/styles/projects.css
@@ -43,51 +43,60 @@ body {
 
 .main {
   display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   margin: 100px 200px;
-  align-items: flex-start;
-  justify-content: space-between;
+}
+
+.main__title {
+  font-family: "Krona One", sans-serif;
+  font-size: 28px;
+  padding: 0 0 160px 0;
+}
+
+.main__section__primaria {
   box-shadow: 5px 5px 10px grey;
   border-radius: 12px;
-}
-
-.main__text__title {
-  font-family: "Krona One", sans-serif;
-  font-size: 30px;
-}
-
-.main__text__paragraph {
+  display: flex;
+  flex-direction: row;
   font-family: "Montserrat", sans-serif;
-  font-size: 18px;
+  width: 80%;
+  height: 350px;
+  margin: 0 0px 0 400px;
+}
+
+.main__div {
+  padding: 60px 80px 80px 80px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   text-align: justify;
 }
 
-.main__text {
+.main__section__title {
+  font-weight: 900;
+}
+
+.main__section__text {
+  font-size: 16px;
+}
+
+.link__button {
   display: flex;
-  flex-direction: column;
-  gap: 24px;
-  padding: 100px;
+  flex-direction: row;
+  gap: 20px;
 }
 
-div {
-  display: flex;
-  flex-direction: column;
-  padding: 3% 3% 3% 0;
-}
-
-#first-image {
-  border-radius: 50%;
-  width: 300px;
-  position: relative;
-  box-shadow: 5px 5px 15px rgb(224, 177, 185);
-}
-
-#second-image {
-  border-radius: 50%;
-  width: 65%;
-  position: relative;
-  top: -70px;
-  right: 70px;
-  box-shadow: 5px 5px 20px rgb(167, 211, 226);
+#primeiro-botao,
+#segundo-botao {
+  color: white;
+  border: 2px solid #167bf7;
+  background-color: #167bf7;
+  border-radius: 8px;
+  padding: 10px;
+  font-weight: 200;
+  font-size: 14px;
+  text-decoration: none;
 }
 
 .footer {
@@ -104,22 +113,4 @@ h3 {
   justify-content: end;
   font-size: 18px;
   font-weight: 200;
-}
-
-@media (max-width: 1240) {
-  .main {
-    margin: 50px 100px 50px 100px;
-    box-sizing: border-box;
-    position: relative;
-  }
-
-  .main__text {
-    padding: 80px 100px 80px 80px;
-  }
-
-  #fist-image,
-  #second-image {
-    width: auto;
-    position: relative;
-  }
 }
