--- a/styles/projects.css
+++ b/styles/projects.css
@@ -345,7 +345,7 @@ h3 {
   }
 
   .menu__imagem img {
-    width: 6%;
+    width: 10%;
   }
 
   .lista-menu {
@@ -381,7 +381,7 @@ h3 {
   }
 
   .icon-home img {
-    width: 7%;
+    width: 12%;
     margin: 0 90%;
   }
 
@@ -441,5 +441,6 @@ h3 {
     padding-left: 10rem;
     padding-right: 1rem;
     width: 400%;
+    font-size: 10px;
   }
 }
