--- a/styles/contact.css
+++ b/styles/contact.css
@@ -9,17 +9,21 @@ body {
   box-sizing: border-box;
   background-image: url("/assets/fundo-vetor.jpg");
   background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .header {
-  padding: 2% 0 0 30%;
+  padding: 3em;
+}
+
+.mobile-nav {
+  display: none;
 }
 
 .header__menu {
   display: flex;
   align-items: self-end;
   gap: 80px;
+  justify-content: center;
 }
 
 .header__menu__links {
@@ -51,6 +55,7 @@ body {
   box-shadow: 5px 5px 10px grey;
   border-radius: 12px;
   gap: 90px;
+  box-sizing: border-box;
 }
 
 .main__title {
@@ -95,15 +100,20 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: 600;
   font-size: 16px;
+  display: flex;
+  justify-content: center;
 }
 
 .footer {
   padding: 30px;
   margin: 3% 0 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .footer__images__logo {
-  width: 2%;
+  width: 4%;
 }
 
 h3 {
@@ -111,97 +121,138 @@ h3 {
   justify-content: end;
   font-size: 18px;
   font-weight: 200;
+  width: 100%;
 }
 
-@media (max-width: 1530px) {
-  .main__section {
-    gap: 90px;
-  }
-  .icons-esquerda,
-  .icons-direita {
-    gap: 20px;
-  }
-}
-
-@media (max-width: 1350px) {
+@media screen and (max-width: 1570px) {
   .main {
-    gap: 60px;
-  }
-  .main__section {
-    gap: 50px;
-  }
-
-  .telefone,
-  .email,
-  .localidade,
-  .linkedin,
-  .github,
-  .instagram {
-    font-size: 16px;
-  }
-
-  .contact-icon {
-    width: 28%;
+    margin: 160px 220px 250px 220px;
   }
 }
 
-@media (max-width: 1260px) {
+@media screen and (max-width: 1240px) {
   .main {
+    margin: 110px 60px 200px 60px;
+  }
+
+  .main__section {
+    display: flex;
     gap: 40px;
   }
-  .main__section {
-    gap: 50px;
+
+  .icons-direita img {
+    width: 12%;
   }
 
+  .icons-esquerda img {
+    width: 10%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .header__menu {
+    display: none;
+  }
+
+  .mobile-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: relative;
+    align-items: center;
+  }
+
+  .menu__botao {
+    display: none;
+  }
+
+  .menu__botao:checked ~ .menu__rotulo > .menu__imagem {
+    background-image: url("../assets/cardapio1.png\ Aberto.png");
+  }
+
+  .menu__imagem img {
+    width: 12%;
+  }
+
+  .lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+  }
+
+  .menu__botao:checked ~ .lista-menu {
+    display: block;
+  }
+
+  li {
+    list-style-type: none;
+  }
+
+  .lista-menu__item {
+    padding: 1em;
+    color: #000000;
+    text-decoration: none;
+    background-color: white;
+    width: 60%;
+    border-bottom: 1px solid lightblue;
+  }
+
+  .lista-menu__link {
+    color: #000000;
+    font-family: "Monteserrat", sans-serif;
+    font-weight: 700;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
+  }
+
+  .icon-home img {
+    width: 15%;
+    margin: 0 90%;
+  }
+
+  .main {
+    width: auto;
+    margin: 20px;
+    padding: 60px 30px;
+  }
   .main__title {
     font-size: 20px;
   }
 
-  .main__text {
-    font-size: 14px;
-    text-align: center;
-  }
-
-  .telefone,
-  .email,
-  .localidade,
-  .linkedin,
-  .github,
-  .instagram {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    font-weight: 500;
-    font-size: 14px;
-  }
-
-  .contact-icon {
-    width: 22px;
-  }
-}
-
-@media (max-width: 1140px) {
-  .main {
-    position: relative;
-  }
   .main__section {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-  }
-
-  .icons-esquerda,
-  .icons-direita {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    text-align: center;
-    padding-bottom: 10px;
+    word-break: break-word;
+    padding-left: 20px;
+    font-size: 12px;
   }
 
   .main__text {
-    position: absolute;
-    margin: 360px 0 50px 0;
+    font-size: 12px;
+    width: auto;
+    text-align: center;
+  }
+
+  .icons-direita img,
+  .icons-esquerda img {
+    width: 7%;
+    font-size: 10px;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem;
+  }
+
+  .footer__images__logo {
+    width: 8%;
+  }
+
+  h3 {
+    width: 300%;
+    font-size: 10px;
   }
 }
