--- a/styles/style.css
+++ b/styles/style.css
@@ -12,13 +12,18 @@ body {
 }
 
 .header {
-  padding: 2% 0 0 30%;
+  padding: 3em;
+}
+
+.mobile-nav {
+  display: none;
 }
 
 .header__menu {
   display: flex;
   align-items: self-end;
   gap: 80px;
+  justify-content: center;
 }
 
 .header__menu__links {
@@ -42,7 +47,7 @@ body {
 
 .main {
   display: flex;
-  margin: 160px 300px;
+  margin: 140px 200px;
   align-items: flex-start;
   justify-content: space-between;
   box-shadow: 5px 5px 10px grey;
@@ -60,24 +65,32 @@ body {
   text-align: justify;
 }
 
-.main__text {
+.main__section {
   display: flex;
-  flex-direction: column;
-  gap: 24px;
-  padding: 100px;
+  flex-direction: row;
 }
 
 .main__image {
   width: 45%;
 }
 
+.main__div {
+  padding: 5em;
+  display: flex;
+  flex-direction: column;
+  gap: 5em;
+}
+
 .footer {
   padding: 30px;
   margin: 3% 0 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .footer__images__logo {
-  width: 2%;
+  width: 4%;
 }
 
 h3 {
@@ -85,113 +98,125 @@ h3 {
   justify-content: end;
   font-size: 18px;
   font-weight: 200;
+  width: 100%;
 }
 
-@media (max-width: 1740px) {
+@media screen and (max-width: 1520px) {
   .main {
-    display: flex;
-    flex-direction: row;
-    margin: 100px 100px 100px 100px;
-    box-sizing: border-box;
-
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
+    margin: 140px 100px;
   }
 
-  .main__image {
-    width: 50%;
-    position: relative;
-  }
-}
-
-@media (max-width: 1555px) {
-  .main__image {
-    width: 48%;
-  }
-}
-
-@media (max-width: 1520px) {
-  .main__text {
-    padding: 80px 50px 0 50px;
-  }
-  .main__image {
-    width: 35rem;
-    height: 30rem;
-  }
-}
-
-@media (max-width: 1375px) {
-  .main__image {
-    height: 30rem;
-    width: 35rem;
-  }
-}
-
-@media (max-width: 1390px) {
-  .main__image {
-    height: 28rem;
-    width: 32rem;
-  }
-}
-
-@media (max-width: 1220px) {
-  .main__text {
-    padding-bottom: 30px;
-  }
-  .main__image {
-    height: 32rem;
-    width: 32rem;
-  }
-}
-
-@media (max-width: 1150px) {
-  .main {
+  .main__div {
+    padding: 3.5em;
     display: flex;
     flex-direction: column;
-    margin: 100px 100px 100px 100px;
-    box-sizing: border-box;
+    gap: 2em;
+  }
+}
 
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
+@media screen and (max-width: 1220px) {
+  .main {
+    margin: 100px 60px;
   }
 
-  .main__text {
-    padding: 50px 70px 50px 70px;
+  .main__image {
+    width: 55%;
   }
+}
+
+@media screen and (max-width: 1024px) {
+  .main {
+    margin: 120px 90px;
+  }
+
+  .main__section {
+    display: flex;
+    flex-direction: column;
+  }
+
   .main__image {
     width: 100%;
-    position: relative;
   }
 }
 
-@media (max-width: 700px) {
-  .main {
-    display: flex;
-    flex-direction: column;
-    margin: 80px 50px 80px 50px;
-    box-sizing: border-box;
-
-    align-items: center;
-    justify-content: space-between;
-    position: relative;
+@media screen and (max-width: 900px) {
+  .header__menu {
+    display: none;
   }
-}
 
-@media (max-width: 500px) {
-  .main {
+  .mobile-nav {
     display: flex;
-    flex-direction: column;
-    margin: 80px 30px 80px 30px;
-    box-sizing: border-box;
-
-    align-items: center;
+    flex-direction: row;
     justify-content: space-between;
     position: relative;
   }
 
-  .main__text {
-    padding: 50px 70px 50px 70px;
+  .menu__botao {
+    display: none;
+  }
+
+  .menu__botao:checked ~ .menu__rotulo > .menu__imagem {
+    background-image: url("../assets/cardapio1.png\ Aberto.png");
+  }
+
+  .menu__imagem img {
+    width: 15%;
+  }
+
+  .lista-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
+  }
+
+  .menu__botao:checked ~ .lista-menu {
+    display: block;
+  }
+
+  li {
+    list-style-type: none;
+  }
+
+  .lista-menu__item {
+    padding: 1em;
+    color: #000000;
+    text-decoration: none;
+    background-color: white;
+    width: 60%;
+    border-bottom: 1px solid lightblue;
+  }
+
+  .lista-menu__link {
+    color: #000000;
+    font-family: "Monteserrat", sans-serif;
+    font-weight: 600;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+
+  .icon-home img {
+    width: 20%;
+    margin: 0 90%;
+  }
+
+  .main {
+    margin: 80px 0 80px 40px;
+    align-items: center;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem;
+  }
+
+  .footer__images__logo {
+    width: 15%;
+  }
+
+  h3 {
+    width: 300%;
+    font-size: 10px;
   }
 }
