changes on mobile version

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -370,6 +370,11 @@ h3 {
     background-color: white;
     width: 30%;
     border-bottom: 1px solid lightblue;
+    background: radial-gradient(
+      circle at 18.7% 37.8%,
+      rgb(250, 250, 250) 0%,
+      rgb(225, 234, 238) 90%
+    );
   }
 
   .lista-menu__link {
