--- a/styles/about.css
+++ b/styles/about.css
@@ -194,7 +194,7 @@ h3 {
   }
 
   .menu__imagem img {
-    width: 8%;
+    width: 10%;
   }
 
   .lista-menu {
@@ -219,6 +219,11 @@ h3 {
     background-color: white;
     width: 60%;
     border-bottom: 1px solid lightblue;
+    background: radial-gradient(
+      circle at 18.7% 37.8%,
+      rgb(250, 250, 250) 0%,
+      rgb(225, 234, 238) 90%
+    );
   }
 
   .lista-menu__link {
