--- a/styles/contact.css
+++ b/styles/contact.css
@@ -171,7 +171,7 @@ h3 {
   }
 
   .menu__imagem img {
-    width: 12%;
+    width: 10%;
   }
 
   .lista-menu {
@@ -196,6 +196,11 @@ h3 {
     background-color: white;
     width: 60%;
     border-bottom: 1px solid lightblue;
+    background: radial-gradient(
+      circle at 18.7% 37.8%,
+      rgb(250, 250, 250) 0%,
+      rgb(225, 234, 238) 90%
+    );
   }
 
   .lista-menu__link {
@@ -208,7 +213,7 @@ h3 {
   }
 
   .icon-home img {
-    width: 15%;
+    width: 12%;
     margin: 0 90%;
   }
 
