--- a/styles/style.css
+++ b/styles/style.css
@@ -160,7 +160,7 @@ h3 {
   }
 
   .menu__imagem img {
-    width: 15%;
+    width: 10%;
   }
 
   .lista-menu {
@@ -185,6 +185,19 @@ h3 {
     background-color: white;
     width: 60%;
     border-bottom: 1px solid lightblue;
+    background: radial-gradient(
+      circle at 18.7% 37.8%,
+      rgba(250, 250, 250, 0.581) 0%,
+      rgba(225, 234, 238, 0.492) 90%
+    );
+  }
+
+  .lista-menu__item:hover {
+    background: radial-gradient(
+      circle at 18.7% 37.8%,
+      rgb(219, 198, 198) 0%,
+      rgb(170, 184, 190) 90%
+    );
   }
 
   .lista-menu__link {
@@ -196,7 +209,7 @@ h3 {
   }
 
   .icon-home img {
-    width: 20%;
+    width: 12%;
     margin: 0 90%;
   }
 
