--- a/styles/projects.css
+++ b/styles/projects.css
@@ -377,12 +377,21 @@ h3 {
     );
   }
 
+  .lista-menu__item:hover {
+    background: radial-gradient(
+      circle at 18.7% 37.8%,
+      rgb(219, 198, 198) 0%,
+      rgb(170, 184, 190) 90%
+    );
+  }
+
   .lista-menu__link {
     color: #000000;
     font-family: "Monteserrat", sans-serif;
     font-weight: 600;
     text-decoration: none;
     text-transform: uppercase;
+    font-size: 12px;
   }
 
   .icon-home img {
