--- a/styles/style.css
+++ b/styles/style.css
@@ -206,6 +206,7 @@ h3 {
     font-weight: 600;
     text-decoration: none;
     text-transform: uppercase;
+    font-size: 12px;
   }
 
   .icon-home img {
